--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
+    "element-plus": "^2.9.4",
     "element-ui": "^2.15.13",
+    "exceljs": "^4.4.0",
     "face-api.js": "^0.22.2",
+    "file-saver": "^2.0.5",
     "gantt-schedule-timeline-calendar": "^3.33.13",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "node-sass": "^6.0.1",
     "pixi": "^0.3.1",
     "qrcode": "^1.5.3",
@@ -36,7 +40,9 @@
     "vue-tree-color": "^2.3.3",
     "vue-video-player": "^6.0.0",
     "vuex": "^3.6.2",
-    "webpack-glsl-loader": "^1.0.1"
+    "webpack-glsl-loader": "^1.0.1",
+    "x2js": "^3.4.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
